plugins {
    id 'application'
    id 'io.qameta.allure' version '2.9.6'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.9.3'
    testImplementation 'org.slf4j:slf4j-nop:1.7.36'
    implementation 'io.rest-assured:rest-assured:5.5.1'
    testImplementation 'org.hamcrest:hamcrest:3.0'
    testImplementation 'io.rest-assured:json-schema-validator:5.5.1'
    testImplementation 'io.qameta.allure:allure-rest-assured:2.13.8'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'
    testImplementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'
    compileOnly 'org.projectlombok:lombok:1.18.28'
    annotationProcessor 'org.projectlombok:lombok:1.18.28'
    testCompileOnly 'org.projectlombok:lombok:1.18.28'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

tasks.withType(JavaCompile) {
    options.fork = true
    options.forkOptions.jvmArgs += [
        "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
        "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
    ]
}

application {
    mainClass = 'hostfully.apis.App'
}

allure {
    autoconfigure = true
    aspectjweaver = true
}

tasks.named('test') {
    doFirst {
        println "Running api tests on: " + System.getProperty('env', 'qa')
    }
    useJUnitPlatform()
    systemProperty 'env', System.getProperty('env', 'qa')
    systemProperty 'allure.results.directory', "$buildDir/allure-results"
    testLogging {
        events 'passed', 'failed', 'skipped'
        showStandardStreams = true
    }
}

tasks.allureReport {
    dependsOn tasks.test
}
